Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31549

Crash on Creator shutdown

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • None
    • Qt Creator 15.0.0
    • None
    • Linux/X11
    • 438b774a1 (master)

      Thread 1 (Thread 0x73aec593a980 (LWP 49410)):
      #0  0x000073aec50ee87e in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get (this=0x8) at /home/jarek/dev/qt-65/qtbase/src/corelib/tools/qscopedpointer.h:111
      #1  0x000073aec50ee54d in qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const> (ptr=...) at /home/jarek/dev/qt-65/qtbase/src/corelib/global/qtclasshelpermacros.h:79
      #2  0x000073aec5214ecc in QObject::d_func (this=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.h:95
      #3  0x000073aec5208cf6 in QObject::thread (this=0x0) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:1617
      #4  0x000073aec7ed1cfe in Utils::ProcessReaper::ProcessReaper (this=0x64253687cef0) at /home/jarek/dev/creator-master/src/libs/utils/processreaper.cpp:226
      #5  0x000073aec7e3ee94 in Utils::SingletonWithOptionalDependencies<Utils::ProcessReaper>::instance () at /home/jarek/dev/creator-master/src/libs/utils/singleton.h:53
      #6  0x000073aec7ed1fa1 in Utils::ProcessReaper::reap (process=0x64253a466df0, timeout=std::chrono::duration = { 500ms }) at /home/jarek/dev/creator-master/src/libs/utils/processreaper.cpp:256
      #7  0x000073aec7f006f5 in Utils::Internal::QProcessImpl::~QProcessImpl (this=0x64253a2eb3f0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/libs/utils/qtcprocess.cpp:478
      #8  0x000073aec7f00720 in Utils::Internal::QProcessImpl::~QProcessImpl (this=0x64253a2eb3f0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/libs/utils/qtcprocess.cpp:478
      #9  0x000073aec7f07712 in std::default_delete<Utils::ProcessInterface>::operator() (this=0x642539552040, __ptr=0x64253a2eb3f0) at /usr/include/c++/13/bits/unique_ptr.h:99
      #10 0x000073aec7f0498e in std::unique_ptr<Utils::ProcessInterface, std::default_delete<Utils::ProcessInterface> >::~unique_ptr (this=0x642539552040, __in_chrg=<optimized out>) at /usr/include/c++/13/bits/unique_ptr.h:404
      #11 0x000073aec7f02394 in Utils::Internal::ProcessPrivate::~ProcessPrivate (this=0x642539552020, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/libs/utils/qtcprocess.cpp:776
      #12 0x000073aec7f023d0 in Utils::Internal::ProcessPrivate::~ProcessPrivate (this=0x642539552020, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/libs/utils/qtcprocess.cpp:776
      #13 0x000073aec7ef49b4 in Utils::Process::~Process (this=0x64253a4594e0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/libs/utils/qtcprocess.cpp:1157
      #14 0x000073aec7ef49f4 in Utils::Process::~Process (this=0x64253a4594e0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/libs/utils/qtcprocess.cpp:1158
      #15 0x000073aeb411c3d7 in std::default_delete<Utils::Process>::operator() (this=0x64253a4ca370, __ptr=0x64253a4594e0) at /usr/include/c++/13/bits/unique_ptr.h:99
      #16 0x000073aeb411bc74 in std::unique_ptr<Utils::Process, std::default_delete<Utils::Process> >::~unique_ptr (this=0x64253a4ca370, __in_chrg=<optimized out>) at /usr/include/c++/13/bits/unique_ptr.h:404
      #17 0x000073aeb411b934 in VcsBase::Internal::VcsCommandPrivate::~VcsCommandPrivate (this=0x64253a4ca2a0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/vcsbase/vcscommand.cpp:27
      #18 0x000073aeb411b9b4 in VcsBase::Internal::VcsCommandPrivate::~VcsCommandPrivate (this=0x64253a4ca2a0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/vcsbase/vcscommand.cpp:27
      #19 0x000073aeb411a10a in VcsBase::VcsCommand::~VcsCommand (this=0x64253945e590, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/vcsbase/vcscommand.cpp:233
      #20 0x000073aeb411a136 in VcsBase::VcsCommand::~VcsCommand (this=0x64253945e590, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/vcsbase/vcscommand.cpp:234
      #21 0x000073aec520a4d3 in QObjectPrivate::deleteChildren (this=0x6425376b1800) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:2228
      #22 0x000073aec520839f in QObject::~QObject (this=0x73ae94d11060 <Git::Internal::gitClient()::client>, __in_chrg=<optimized out>) at /home/jarek/dev/qt-65/qtbase/src/corelib/kernel/qobject.cpp:1164
      #23 0x000073ae94b4bb84 in VcsBase::VcsBaseClientImpl::~VcsBaseClientImpl (this=0x73ae94d11060 <Git::Internal::gitClient()::client>, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/vcsbase/vcsbaseclient.h:40
      #24 0x000073ae94b0b1a4 in Git::Internal::GitClient::~GitClient (this=0x73ae94d11060 <Git::Internal::gitClient()::client>, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/git/gitclient.cpp:838
      #25 0x000073aec4847a66 in __run_exit_handlers (status=0, listp=<optimized out>, run_list_atexit=run_list_atexit@entry=true, run_dtors=run_dtors@entry=true) at ./stdlib/exit.c:108
      #26 0x000073aec4847bae in __GI_exit (status=<optimized out>) at ./stdlib/exit.c:138
      #27 0x000073aec482a1d1 in __libc_start_call_main (main=main@entry=0x642534f0c094 <main(int, char**)>, argc=argc@entry=1, argv=argv@entry=0x7ffc02d65b18) at ../sysdeps/nptl/libc_start_call_main.h:74
      #28 0x000073aec482a28b in __libc_start_main_impl (main=0x642534f0c094 <main(int, char**)>, argc=1, argv=0x7ffc02d65b18, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffc02d65b08) at ../csu/libc-start.c:360
      #29 0x0000642534f08715 in _start ()
      

        For Gerrit Dashboard: QTCREATORBUG-31549
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes