VcsBase: Fix a crash on shutdown

Since GitClient is a static object, it's being deleted after
the git plugin is unloaded. We can't make it a parent of VcsCommand
instances, as the process reaper may be already gone.

Use ExtensionSystem::shutdownGuard() as a parent for VcsCommand
instances instead.

This commit reverts d5e8f70192494859b36b5539ab063e2cc0fdd896.

Amends d5e8f70192494859b36b5539ab063e2cc0fdd896

Fixes: QTCREATORBUG-31549
Change-Id: I27e6abbfcac2746e8fa4c447010aab43c11444a9
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: André Hartmann <aha_1980@gmx.de>