src/plugins/fossil/fossilplugin.cpp
@@ -931,7 +931,7 @@ VcsCommand *FossilPluginPrivate::createInitialCheckoutCommand(const QString &sou
     checkoutPath.createDir();
 
     // Setup the wizard page command job
-    auto command = VcsBaseClient::createVcsCommand(this, checkoutPath,
+    auto command = VcsBaseClient::createVcsCommand(checkoutPath,
                                                    fossilClient().processEnvironment(checkoutPath));
 
     if (!isLocalRepository
