src/plugins/vcsbase/vcsbaseclient.cpp
@@ -16,6 +16,8 @@
 #include <coreplugin/editormanager/editormanager.h>
 #include <coreplugin/idocument.h>
 
+#include <extensionsystem/shutdownguard.h>
+
 #include <texteditor/textdocument.h>
 
 #include <utils/commandline.h>
@@ -71,8 +73,7 @@ FilePath VcsBaseClientImpl::vcsBinary(const Utils::FilePath &forDirectory) const
 VcsCommand *VcsBaseClientImpl::createCommand(const FilePath &workingDirectory,
                                              VcsBaseEditorWidget *editor) const
 {
-    auto cmd = createVcsCommand(const_cast<VcsBaseClientImpl *>(this),
-                                workingDirectory, processEnvironment(workingDirectory));
+    auto cmd = createVcsCommand(workingDirectory, processEnvironment(workingDirectory));
     if (editor) {
         editor->setCommand(cmd);
         connect(cmd, &VcsCommand::done, editor, [editor, cmd] {
@@ -211,14 +212,8 @@ int VcsBaseClientImpl::vcsTimeoutS() const
 VcsCommand *VcsBaseClientImpl::createVcsCommand(const FilePath &defaultWorkingDir,
                                                 const Environment &environment)
 {
-    return new VcsCommand(defaultWorkingDir, environment);
-}
-
-VcsCommand *VcsBaseClientImpl::createVcsCommand(QObject *parent, const FilePath &defaultWorkingDir,
-                                                const Environment &environment)
-{
     auto command = new VcsCommand(defaultWorkingDir, environment);
-    command->setParent(parent);
+    command->setParent(ExtensionSystem::shutdownGuard());
     return command;
 }
 
